--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.1",
+    "axios": "^1.2.2",
     "element-ui": "^2.15.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
